# DBMesh

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  COMMERCIAL_LICENSE.md  LICENSE  Makefile  README.md  a.out  dbmesh.yaml  docker-compose.yml
.github/workflows/: ci.yml
api/: CMakeLists.txt
cli/: CMakeLists.txt
cli/src/: main.cpp
cluster/: CMakeLists.txt
cmake/: CompilerFlags.cmake  Dependencies.cmake  run_clang_tidy.sh
core/: CMakeLists.txt
core/include/dbmesh/core/: application.h  config.h  logger.h  result.h  types.h
core/src/: application.cpp  config.cpp  config_test.cpp  logger.cpp  logger_test.cpp  main.cpp  types_test.cpp
docker/: Dockerfile  mysql-init.sql  mysql-primary.cnf  mysql-replica.cnf  prometheus.yml
failover/: CMakeLists.txt
metrics/: CMakeLists.txt
pool/: CMakeLists.txt
pool/include/dbmesh/pool/: backend_connection.h  backend_connector.h  connection_pool.h  mysql_backend_connection.h  pool_manager.h  pooled_connection.h  types.h
pool/src/: backend_connector.cpp  connection_pool.cpp  connection_pool_test.cpp  mysql_backend_connection.cpp  pool_manager.cpp  pool_manager_test.cpp
protocol/: CMakeLists.txt
protocol/mysql/: CMakeLists.txt
protocol/mysql/include/dbmesh/protocol/mysql/: backend_connector.h  codec.h  constants.h  handshake.h  mysql_backend_connection.h  mysql_connection.h  mysql_frontend.h  packet_framer.h  packets.h  types.h
protocol/mysql/src/: backend_connector.cpp  handshake.cpp  handshake_test.cpp  mysql_backend_connection.cpp  mysql_connection.cpp  mysql_frontend.cpp  packet_framer.cpp  packet_framer_test.cpp
protocol/postgres/: CMakeLists.txt
routing/: CMakeLists.txt
routing/include/dbmesh/routing/: backend_entry.h  backend_registry.h  backend_selector.h  errors.h  query_classifier.h  read_write_router.h  routing_engine.h  routing_policy.h  schema_extractor.h  schema_registry.h  session_view.h
routing/src/: backend_registry.cpp  backend_registry_test.cpp  backend_selector.cpp  backend_selector_test.cpp  query_classifier.cpp  query_classifier_test.cpp  read_write_router.cpp  read_write_router_test.cpp  routing_engine.cpp  routing_engine_test.cpp  routing_policies.cpp  schema_extractor.cpp  schema_extractor_test.cpp  schema_registry.cpp  schema_registry_test.cpp
security/: CMakeLists.txt
session/: CMakeLists.txt
storage/: CMakeLists.txt
tests/: CMakeLists.txt  docker-compose.yml
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
